<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_projects"
        android:icon="@drawable/project_diagram"
        android:title="@string/project"></item>

    <item android:id="@+id/navigation_directory"
        android:icon="@drawable/users"
        android:title="@string/title_directory"/>

    <item
        android:id="@+id/navigation_information"
        android:icon="@drawable/newspaper"
        android:title="@string/information"></item>

    <item android:id="@+id/navigation_offers"
        android:icon="@drawable/briefcase"
        android:title="@string/title_industryOffers"/>

</menu>
