<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainactivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id = "@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_halflogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/university_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alumni"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="55sp"
        android:layout_marginTop="75dp"
        android:layout_marginStart="15dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toRightOf="@id/logo"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="64dp"
        android:background="@drawable/signinbutton"
        android:drawableStart="@drawable/google"
        android:drawablePadding="-40dp"
        android:paddingStart="40dp"
        android:paddingEnd="0dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:hapticFeedbackEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="2dp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="@id/login"
        app:layout_constraintTop_toTopOf="@id/login" />


</android.support.constraint.ConstraintLayout>