<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_ppic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                tools:src="@drawable/demoppic"
                android:layout_margin="20dp"
                android:contentDescription="@string/profile_picture" />

            <TextView
                android:id="@+id/changePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/option1"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Personal Information"
                android:layout_margin="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/profileForm_Name"
                    android:textColor="#000"
                    android:textAlignment="center"
                    android:layout_weight="3"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profile_displayName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    tools:text="Mihir Srivastava"
                    android:textSize="15sp"
                    android:fontFamily="@font/roboto_regular" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/profileForm_email"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:layout_weight="3"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    tools:text="mihir.srivastava@avantika.edu.in"
                    android:textSize="15sp"
                    android:fontFamily="@font/roboto_regular" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Education Information"
                    android:layout_margin="20dp"
                    android:layout_weight="2" />

                <ImageButton
                    android:id="@+id/addEducationInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="8"
                    android:padding="5dp"
                    android:background="@null"
                    android:src="@drawable/ic_plus_red" />

            </LinearLayout>

            <com.avantika.alumni.support.NonScrollListView
                android:id="@+id/educationListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:scrollbars="none"
                android:padding="5dp"
                android:dividerHeight="2dp">

            </com.avantika.alumni.support.NonScrollListView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Experience Information"
                    android:layout_margin="20dp"
                    android:layout_weight="2" />

                <ImageButton
                    android:id="@+id/addExperienceInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="8"
                    android:padding="5dp"
                    android:background="@null"
                    android:src="@drawable/ic_plus_red" />

            </LinearLayout>


            <com.avantika.alumni.support.NonScrollListView
                android:id="@+id/experienceListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null"
                android:scrollbars="none"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:dividerHeight="2dp">

            </com.avantika.alumni.support.NonScrollListView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>